--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:hint="账号"
+                android:hint="@string/loginName"
                 android:inputType="textPersonName" />
 
         </android.support.design.widget.TextInputLayout>
@@ -65,11 +65,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="帮助..."
+            android:textColor="@color/hint_color"
             android:textSize="10dp" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="207dp"
+        android:layout_width="212dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -97,8 +98,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
+            android:singleLine="true"
             android:text="手指触碰指纹验证"
+            android:textAlignment="center"
             android:textColor="@color/textc" />
     </LinearLayout>
 
