--- a/app/src/main/res/layout/pass_input_auth_dialog.xml
+++ b/app/src/main/res/layout/pass_input_auth_dialog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:gravity="center"
@@ -11,7 +12,7 @@
         android:layout_height="35dp"
         android:background="@color/dialog_title"
         android:gravity="center_vertical"
-        android:text=" ⬛请输入密码！"
+        android:text=" ⬛ 明文密码"
         android:textAlignment="center"
         android:textColor="@color/dialog_text"
         android:textStyle="bold" />
@@ -24,7 +25,9 @@
         android:ems="10"
         android:hint="密码"
         android:inputType="textPassword"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textColor="@color/colorAccent"
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/textview_pass"
@@ -33,6 +36,8 @@
         android:background="@color/textback"
         android:gravity="center"
         android:text="TextView"
+        android:textColor="@color/colorAccent"
+        android:textSize="24sp"
         android:visibility="gone" />
 
     <ListView
