--- a/app/src/main/res/layout/activity_pass_list.xml
+++ b/app/src/main/res/layout/activity_pass_list.xml
@@ -69,4 +69,15 @@
         android:id="@+id/include"
         layout="@layout/content_pass_list" />
 
+    <android.support.design.widget.FloatingActionButton
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
+        android:layout_gravity="bottom|end"
+        app:layout_anchorGravity="end|bottom"
+        app:srcCompat="@mipmap/add_ico"
+        app:layout_behavior="com.android.passmanager.Util.HideFab"/>
+
 </android.support.design.widget.CoordinatorLayout>
