--- a/app/src/main/res/layout/add_account_dialog.xml
+++ b/app/src/main/res/layout/add_account_dialog.xml
@@ -162,7 +162,7 @@
             android:id="@+id/add_new_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_background"
+            android:background="@color/dialog_text"
             android:text="保存" />
 
     </LinearLayout>
