--- a/app/src/main/res/layout/acount_list_itme_layout.xml
+++ b/app/src/main/res/layout/acount_list_itme_layout.xml
@@ -21,35 +21,62 @@
         tools:ignore="VectorDrawableCompat" />
 
     <LinearLayout
-        android:id="@+id/item_view"
+        android:id="@+id/all_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="15dp"
-        android:orientation="vertical"
-        android:visibility="visible">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/title_item"
+        <LinearLayout
+            android:id="@+id/item_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="title"
-            android:textAlignment="center"
-            android:textColor="@color/title_color"
-            android:textSize="20dp" />
+            android:layout_gravity="center"
+            android:layout_margin="15dp"
+            android:orientation="vertical"
+            android:visibility="visible">
 
-        <TextView
-            android:id="@+id/account_item"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="name"
-            android:textAlignment="center" />
+            <TextView
+                android:id="@+id/title_item"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="title"
+                android:textAlignment="center"
+                android:textColor="@color/title_color"
+                android:textSize="20dp"
+                android:visibility="visible" />
 
-        <TextView
-            android:id="@+id/pass_item"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="********"
-            android:textAlignment="center" />
+            <TextView
+                android:id="@+id/account_item"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="name"
+                android:textAlignment="center" />
+
+            <TextView
+                android:id="@+id/pass_item"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="********"
+                android:textAlignment="center" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/hide_item_view"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:background="@color/red"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="删除"
+                android:textColor="@color/textc"
+                android:textSize="18sp" />
+        </LinearLayout>
     </LinearLayout>
+
 </android.support.v7.widget.CardView>
