--- a/app/src/main/res/layout/content_pass_list.xml
+++ b/app/src/main/res/layout/content_pass_list.xml
@@ -6,8 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".PassList"
-    tools:showIn="@layout/activity_pass_list">
+    tools:showIn="@layout/activity_pass_list"
+    tools:context=".PassList">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/pass_list"
