--- a/app/src/main/res/layout/item_popup.xml
+++ b/app/src/main/res/layout/item_popup.xml
@@ -9,10 +9,10 @@
         android:id="@+id/delete_db"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="删除"
         android:background="@drawable/button_type_update"
+        android:text="删除"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/dialog_title"
         android:textSize="24sp" />
 
     <TextView
@@ -22,7 +22,7 @@
         android:background="@drawable/button_type_update"
         android:text="还原"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/dialog_title"
         android:textSize="24sp" />
 
 </LinearLayout>
