--- a/app/src/main/res/layout/meg_dialog.xml
+++ b/app/src/main/res/layout/meg_dialog.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/cardview_dark_background"
+    android:layout_height="match_parent"
+    android:background="@color/red"
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="25dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="长按进行备份还原操作"
-        android:textAlignment="center"
-        android:textColor="@color/textc" />
+        android:id="@+id/textView3"
+        android:layout_width="50dp"
+        android:layout_height="100dp"
+        android:gravity="center"
+        android:text="删除"
+        android:textColor="@color/textc"
+        android:textSize="24sp" />
 </LinearLayout>
