--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorPrimaryDark">#585858</color>
     <color name="colorPrimary">#727272</color>
-    <color name="colorPrimaryDark">#727272</color>
-    <color name="colorAccent">#16AEDC</color>
-    <color name="color">#bf8f4fe4</color>
+    <color name="colorAccent">#575454</color>
+    <color name="color">#BF8F4FE4</color>
     <color name="textc">#E4E4E4</color>
     <color name="hint_color">#979797</color>
     <color name="colorFingerBack">#459FFF</color>
     <color name="layoutcolor">#00ffffff</color>
-    <color name="dialog_title">#49463e</color>
-    <color name="dialog_text">#afaa95</color>
+    <color name="dialog_title">#49463E</color>
+    <color name="dialog_text">#AFAA95</color>
     <color name="textback">#dfdbc8</color>
     <color name="title_color">#16aedc</color>
     <color name="theme_color">#3ACB19</color>
     <color name="card">#BF797979</color>
+    <color name="red">#E4DF0000</color>
 </resources>
