--- a/app/src/main/res/layout/add_account_dialog.xml
+++ b/app/src/main/res/layout/add_account_dialog.xml
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/add_dialog_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="添加新项"
