--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimaryDark">#585858</color>
-    <color name="colorPrimary">#727272</color>
+    <color name="colorPrimaryDark">#353232</color>
+    <color name="colorPrimary">#353232</color>
     <color name="colorAccent">#575454</color>
     <color name="color">#BF8F4FE4</color>
     <color name="textc">#E4E4E4</color>
@@ -15,4 +15,6 @@
     <color name="theme_color">#3ACB19</color>
     <color name="card">#BF797979</color>
     <color name="red">#E4DF0000</color>
+    <color name="Dark">#585858</color>
+    <color name="back_page">#FFFFFF</color>
 </resources>
