--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="red">#E4DF0000</color>
     <color name="Dark">#585858</color>
     <color name="back_page">#FFFFFF</color>
+    <color name="temp">#25BD0E</color>
 </resources>
