--- a/app/src/main/res/layout/acount_list_itme_layout.xml
+++ b/app/src/main/res/layout/acount_list_itme_layout.xml
@@ -40,6 +40,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="title"
+                android:singleLine="true"
                 android:textAlignment="center"
                 android:textColor="@color/title_color"
                 android:textSize="20dp"
@@ -50,6 +51,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="name"
+                android:singleLine="true"
                 android:textAlignment="center" />
 
             <TextView
@@ -57,6 +59,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="********"
+                android:singleLine="true"
                 android:textAlignment="center" />
 
         </LinearLayout>
