--- a/app/src/main/res/layout/acount_list_itme_layout.xml
+++ b/app/src/main/res/layout/acount_list_itme_layout.xml
@@ -11,6 +11,7 @@
     android:descendantFocusability="blocksDescendants"
     android:orientation="vertical"
     app:cardElevation="20dp"
+    android:background="@drawable/button_background"
     android:foreground="@drawable/cardview_click">
 
     <ImageView
